--- a/src/app/commands-ui/output-area/output-area.component.scss
+++ b/src/app/commands-ui/output-area/output-area.component.scss
@@ -5,14 +5,15 @@
 }
 
 .container {
+  user-select: none;
   display: flex;
   position: relative;
   padding: 32px 0 0 0;
 }
 
 .top-bar {
-  display: flex;
   user-select: none;
+  display: flex;
   flex-direction: row;
   align-items: center;
   position: absolute;
@@ -21,6 +22,7 @@
 }
 
 .output-box-container {
+  user-select: none;
   position: relative;
   width: 100%;
   padding: 5px;
@@ -28,6 +30,7 @@
 }
 
 .output-box-background {
+  user-select: none;
   position: absolute;
   top: 0;
   left: 0;
